Changes required to get the thing to build and package.

--- a/build.properties
+++ b/build.properties
@@ -8,3 +8,9 @@ javadoc.packagenames=org.pentaho.di.*
 java.source=8.0
 java.target=8.0
 
+dependency.kettle.revision=7.1-SNAPSHOT
+dependency.pentaho-metastore.revision=7.1-SNAPSHOT
+
+swt.lib.dir=libswt
+provided.lib.dir=lib-provided
+
