--- a/build.xml
+++ b/build.xml
@@ -1,66 +1,98 @@
 <!--===========================================================================
-  This is the build file for the Metastore project.
-  
-  This build file will use the subfloor.xml file as the default build
-  process and should only override the tasks that need to differ from
-  the common build file.
-  
-  See common_build.xml for more details
+PENTAHO CORPORATION PROPRIETARY AND CONFIDENTIAL
+
+Copyright 2002 - 2014 Pentaho Corporation (Pentaho). All rights reserved.
+
+NOTICE: All information including source code contained herein is, and
+remains the sole property of Pentaho and its licensors. The intellectual
+and technical concepts contained herein are proprietary and confidential
+to, and are trade secrets of Pentaho and may be covered by U.S. and foreign
+patents, or patents in process, and are protected by trade secret and
+copyright laws. The receipt or possession of this source code and/or related
+information does not convey or imply any rights to reproduce, disclose or
+distribute its contents, or to manufacture, use, or sell anything that it
+may describe, in whole or in part. Any reproduction, modification, distribution,
+or public display of this information without the express written authorization
+from Pentaho is strictly prohibited and in violation of applicable laws and
+international treaties. Access to the source code contained herein is strictly
+prohibited to anyone except those individuals and entities who have executed
+confidentiality and non-disclosure agreements or other agreements with Pentaho,
+explicitly covering such access.
 ============================================================================-->
-<project name="pdi-hcp-plugin" basedir="." default="default">
+<project name="pdi-hcp-plugin" default="default" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
+  <property name="bin.dir" value="${basedir}/bin"/>
+  <property name="stage.dir" value="${bin.dir}/stage"/>
+  <property name="approot.stage.dir" value="${stage.dir}/hdi-hcp-plugin"/>
+
+  <property name="subfloor-ee.parent.file" value="subfloor-pkg.xml" />
+  <import file="build-res/subfloor-ee.xml" />
 
   <description>
-    This build file is used to create the API project
-    and works with the subfloor.xml file.
+    pdi-hcp-plugin plugin build file
   </description>
 
-  <!-- The continuous target is used by CI ... this is the list of -->
-  <!-- tasks that the CI machine will run.                         -->
-  <!-- DO NOT change the CI machine's ant task .. change this list -->
-  <target name="continuous" 
-          depends="clean-all,resolve,publish" />
+  <!-- Setup the compile classpath -->
+  <path id="classpath">
+    <fileset dir="${devlib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${lib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${swt.lib.dir}/win32">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${provided.lib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+  </path>
 
-  <!-- Import the common_build.xml file which contains all the default tasks -->
-  <import file="build-res/subfloor.xml"/>
+  <!-- Setup the classpath used for testing -->
+  <path id="test.classpath">
+    <pathelement path="${testclasses.dir}" />
+    <pathelement path="${classes.dir}" />
+    <fileset dir="${devlib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${testlib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${lib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${swt.lib.dir}/win32">
+      <include name="**/*.jar" />
+    </fileset>
+    <fileset dir="${provided.lib.dir}">
+      <include name="**/*.jar" />
+    </fileset>
+  </path>
 
-    <!--
-      AS STATED ABOVE, THE ONLY TASKS THAT SHOULD EXIST IN THIS BUILD FILE ARE
-      THE TASKS THAT NEED TO DIFFER FROM THE DEFAULT IMPLEMENTATION OF THE TASKS
-      FOUND IN common_build.xml.
-    --> 
-    
-	<target name="create-dot-classpath" depends="init,resolve,subfloor.create-dot-classpath"/>
-	
-	<target name="default" depends="clean,init,resolve,dist"/>
-	    
-  <target name="set-revision">
-    <condition property="revision" value="${svn-revision}" else="1">
-        <length string="${svn-revision}" length="7" when="less"/>
-    </condition>
-    
-    <echo message="Revision set to r${revision}"/>
+  <target name="clean-jars" depends="subfloor.clean-jars">
+    <delete dir="${swt.lib.dir}"/>
+    <delete dir="${provided.lib.dir}"/>
   </target>
 
-  <!--=======================================================================
-      generate.manifest
-      
-      Creates a new manifest file if one is not specified, or updates
-      an existing manifest file if one is specified.
-      ====================================================================-->
-  <target name="generate.manifest" depends="init,set-build.id,set-revision">
-    <delete file="${dist.manifest.file}" />
-    <touch file="${dist.manifest.file}" />
-    <copy file="${manifest.file}" tofile="${dist.manifest.file}" overwrite="true" failonerror="false" />
-
-    <manifest file="${dist.manifest.file}" mode="update">
-      <attribute name="Implementation-Title" value="${impl.title}" />
-      <attribute name="Implementation-Version" value="${impl.version}" />
-      <attribute name="Specification-Version" value="${revision}" />
-      <attribute name="Implementation-Vendor" value="${impl.vendor}" />
-      <attribute name="Implementation-ProductID" value="${impl.productID}" />
-      <attribute name="Compile-Timestamp" value="${compile.timestamp}" />
-      <attribute name="Compile-User" value="${user.name}" />
-    </manifest>
+  <target name="resolve" depends="subfloor.resolve">
+    <ivy:resolve file="${ivyfile}" conf="provided" />
+    <ivy:retrieve conf="provided" pattern="${provided.lib.dir}/[module]-[revision](-[classifier]).[ext]" symlink="${ivy.use.symlinks.internal}" /> 
+    <ivy:resolve file="${ivyfile}" conf="swtlibs" />
+    <ivy:retrieve conf="swtlibs" pattern="${swt.lib.dir}/swtlibs.zip" symlink="${ivy.use.symlinks.internal}" /> 
+    <unzip dest="${basedir}" src="${swt.lib.dir}/swtlibs.zip"/>
+    <delete file="${swt.lib.dir}/swtlibs.zip"/>
   </target>
 
+  <target name="assemble.copy-libs" depends="subfloor-pkg.assemble.copy-libs">
+    <move file="${approot.stage.dir}/lib/${ivy.artifact.id}-${project.revision}.jar" tofile="${approot.stage.dir}/${ivy.artifact.id}-${project.revision}.jar"/>
+    <!-- Update the version.xml with the current version of this plugin -->
+    <copy file="res/version.xml" todir="${approot.stage.dir}" />
+    <replace file="${approot.stage.dir}/version.xml" token="@TRUNK@" value="${project.revision}" />
+  </target>
+
+  <target name="assemble" depends="subfloor-pkg.assemble">
+    <delete>
+      <fileset dir="${approot.stage.dir}" includes="**/.gitignore"/>
+    </delete>
+  </target>
+  
 </project>
